<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.momylaundry.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.momylaundry.ui.dashboard.DashboardFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_report"
        android:name="com.momylaundry.ui.notifications.NotificationsFragment"
        android:label="@string/title_report"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.momylaundry.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>