<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.laundry.LaundryActivity">
    <include
        android:id="@+id/toolbarLaundry"
        layout="@layout/layout_toolbar"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:id="@+id/rv_laundry"
        android:layout_height="0dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        app:layout_constraintBottom_toTopOf="@id/layoutButtonCheckout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarLaundry"
        tools:listitem="@layout/item_laundry" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_background_top_radius"
        app:elevation="8dp"
        android:elevation="16dp"
        android:padding="16dp"
        android:id="@+id/layoutButtonCheckout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/background_box"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:alpha="0.3"
            android:src="@color/primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_box"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_box"
            app:layout_constraintBottom_toBottomOf="@id/background_box"
            app:layout_constraintEnd_toEndOf="@id/background_box"
            app:layout_constraintStart_toStartOf="@id/background_box"
            app:layout_constraintTop_toTopOf="@id/background_box"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/tv_total_item"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@id/image_box"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/totalItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/image_box"
            app:layout_constraintTop_toBottomOf="@id/tv_total"
            android:text="@string/view_zero_items" />

        <TextView
            android:id="@+id/tv_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/cost_item"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_total" />

        <TextView
            android:id="@+id/price_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/primary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/tv_cost"
            app:layout_constraintTop_toBottomOf="@id/tv_cost"
            android:text="@string/view_zero_price" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_confirm_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="16dp"
            android:text="@string/string_button_checkout"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_box" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>